--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
+h1 {
+  margin: 1rem;
+  width: 17rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.description {
+  margin: 1rem;
+  width: 16rem;
+  padding-left: 1rem;
+  margin-bottom: -1rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
+.EnglishTitle {
+  margin-left: 3rem;
+  position: absolute;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.IcelandicTitle {
+  margin-left: 9.5rem;
+  text-align: left;
+  position: relative;
+}
+
+.row {
+  margin: 1rem;
+  width: 15rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  border: black 1px solid;
+}
+
+.greeting {
+  margin-left: 3rem;
+  position: absolute;
+}
+
+.greetingIcelandic {
+  margin-left: 10rem;
+  text-align: left;
+  position: relative;
 }
